kubernetes/gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: endterm
spec:
  type: LoadBalancer
  selector:
    app: api-gateway
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
